# openmenu-gdemu-manager

./: .gitignore  AGENTS.md  Abrir_OpenMenu_GDEMU_Manager.vbs  Abrir_OpenMenu_GDEMU_Manager_DEBUG.bat  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
docs/: DISTRIBUTION.md  FAQ.es.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0-beta.1.md  RELEASE_NOTES_v0.2.0-beta.3.md  RELEASE_NOTES_v0.2.0-beta.4.md  USER_GUIDE.es.md
docs/design/: button-attention-effects.html
docs/research/: openmenu-gdi-rebuild.md
docs/screenshots/: README.md
openmenu_gdemu_manager/: __init__.py  __main__.py
scripts/: build_portable.ps1  portable_launcher.py  test_release.ps1
src/openmenu_gdemu_manager/: __init__.py  __main__.py  i18n.py
src/openmenu_gdemu_manager/app/: bootstrap.py  logger.py
src/openmenu_gdemu_manager/config/: paths.py  settings.py  state.py
src/openmenu_gdemu_manager/core/: aliases.py  dedupe.py  image_quality.py  matching.py  models.py  placeholder.py
src/openmenu_gdemu_manager/covers/: search.py
src/openmenu_gdemu_manager/covers/providers/: __init__.py  base.py  community_api.py  libretro.py  local.py  openmenu.py  registry.py  screenscraper.py
src/openmenu_gdemu_manager/dreamcast/: metadata.py  openmenu_dat.py  pvr.py  rom_library.py  scanner.py  sd_writer.py  storage_diagnostics.py
src/openmenu_gdemu_manager/reports/: exporter.py
src/openmenu_gdemu_manager/resources/: __init__.py
src/openmenu_gdemu_manager/resources/i18n/: en.json  es.json
src/openmenu_gdemu_manager/resources/icons/: __init__.py
src/openmenu_gdemu_manager/services/: backup_service.py  bulk_service.py  cover_library.py  cover_service.py  game_service.py  legacy_menu_upgrade.py  openmenu_rebuilder.py  sd_registry.py  sd_slot_transaction.py  search_log.py  setup_service.py  transaction_log.py
src/openmenu_gdemu_manager/ui/: icons.py  image_qt.py  main_window.py  theme.py  theme_audio.py  workers.py
src/openmenu_gdemu_manager/ui/dialogs/: __init__.py  about.py  add_game.py  backup_prompt.py  bulk_progress.py  candidate.py  confirm_apply.py  cover_preview.py  language_selection.py  legacy_upgrade.py  provider_settings.py  setup_wizard.py
src/openmenu_gdemu_manager/ui/widgets/: __init__.py  buttons.py  delegates.py  games_table_model.py  labels.py  overlays.py  theme_background.py
tests/: test_backup_prompt_decision.py  test_backup_service.py  test_bulk_selection.py  test_community_api_integration.py  test_community_api_provider.py  test_cover_library.py  test_cover_providers.py  test_cover_search.py  test_cover_settings.py  test_game_service.py  test_games_table_model.py  test_image_quality.py  test_legacy_menu_upgrade.py  test_matching.py  test_metadata.py  test_openmenu_dat.py  test_openmenu_rebuilder.py  test_paths.py  test_portable_launcher.py  test_remote_content_safety.py  test_rom_library.py  test_save_worker_rebuilder.py  test_scanner_dat_covers.py  test_sd_registry.py  test_sd_slot_transaction.py  test_sd_writer.py  test_search_log.py  test_setup_service.py  test_setup_wizard_mapping.py  test_storage_diagnostics.py  test_transaction_log.py  test_ui_templates.py  test_update_check.py
